--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "encore/laravel-admin": "^1.8",
         "laravel/framework": "^11.9",
         "laravel/sanctum": "^4.0",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "stripe/stripe-php": "^15.7"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
