--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,10 @@
         "php": "^8.2",
         "doctrine/dbal": "^3.9",
         "encore/laravel-admin": "^1.8",
+        "laravel/cashier": "^15.4",
         "laravel/framework": "^11.9",
         "laravel/sanctum": "^4.0",
-        "laravel/tinker": "^2.9",
-        "stripe/stripe-php": "^15.7"
+        "laravel/tinker": "^2.9"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
